40 lines of CSS removed with duplicate font styles

--- a/contact-us.html
+++ b/contact-us.html
@@ -47,15 +47,15 @@
                 <!--"Styling for horizontal lines taken from vclever.com"-->
                 <div class="col-12 col-sm-12 col-md-4">
                     <a href="index.html" class="no-underline">
-                        <h3 class="text-center logo-abb">TT</h3>
-                        <h1 class="text-center logo">Tartan Taps</h1>
+                        <h3 class="text-center logo-abb headings-light">TT</h3>
+                        <h1 class="text-center logo headings-dark">Tartan Taps</h1>
                     </a>
                 </div>
 
                 <!-- Sign In/Sign Up Logo Row -->
                 <div class="col-12 col-sm-12 col-md-4 d-none d-md-block text-right">
                     <a data-toggle="modal" data-target="#signUpModal">
-                        <h4 class="headings-logo">Sign In/Sign Up</h4>
+                        <h4 class="headings-logo headings-light">Sign In/Sign Up</h4>
                     </a>
                 </div> 
             </div>
@@ -101,7 +101,7 @@
             <div class="opaque-overlay">&nbsp;</div>
             <div class="row">
                 <div class="col-12">
-                    <h1 class="image-headings">Contact Us</h1>
+                    <h1 class="image-headings headings-light">Contact Us</h1>
                 </div>
             </div>
         </div>
@@ -113,36 +113,36 @@
 
                 <!-- FAQ's -->
                 <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-                    <h2 class="faq-headings text-center">FAQ's</h2>
-                    <p class="context-text text-center"><small>Click on questions to see the answers.</small></p>
+                    <h2 class="faq-headings headings-dark text-center">FAQ's</h2>
+                    <p class="context-text-dark text-center"><small>Click on questions to see the answers.</small></p>
                     <br>
-                    <details class="content-text text-center faq-questions">
+                    <details class="context-text-dark text-center faq-questions">
                         <summary><strong>How often do I receive a crate?</strong></summary>
                         <p>A new crate will be sent every month.</p>
                     </details>
-                    <details class="content-text text-center faq-questions">
+                    <details class="context-text-dark text-center faq-questions">
                         <summary><strong>How will I know when I receive my beer?</strong></summary>
                         <p>We will email you in advance of every delivery to let you know you're beer is ready to 
                             sent and what it contains.
                         </p>
                     </details>
-                    <details class="content-text text-center faq-questions">
+                    <details class="context-text-dark text-center faq-questions">
                         <summary><strong>Can I change the date my beer is delivered?</strong></summary>
                         <p>Yes. You can contact us anytime to change the date of delivery, prior to the cut-off date stated in the advance email. </p>
                     </details>
-                    <details class="content-text text-center faq-questions">
+                    <details class="context-text-dark text-center faq-questions">
                         <summary><strong>Can I change the crate size?</strong></summary>
                         <p>Yes. You can contact us anytime to change the amount of beers you receive, prior to the cut-off date stated in the advance email. </p>
                     </details>
-                    <details class="content-text text-center faq-questions">
+                    <details class="context-text-dark text-center faq-questions">
                         <summary><strong>How much does delivery cost?</strong></summary>
                         <p>Nothing. Delivery is included in the cost of your subscription</p>
                     </details>
-                    <details class="content-text text-center faq-questions">
+                    <details class="context-text-dark text-center faq-questions">
                         <summary><strong>Are there any hidden fees or cancellation costs?</strong></summary>
                         <p>No. There are no hidden fees, and no additional costs to pause or cancel your subscription</p>
                     </details>
-                    <details class="content-text text-center faq-questions">
+                    <details class="context-text-dark text-center faq-questions">
                         <summary><strong>How do I cancel or pause my subscription?</strong></summary>
                         <p>Simply fill out the form letting us know how long you wish your subscription to be paused for, or if you wish to cancel. Alternatively give us a call. We will send email confirmation of any changes made to your subscription.</p>
                     </details>
@@ -150,27 +150,28 @@
 
                 <!-- Contact us form -->
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-                    <h2 class="faq-headings text-center">Your Enquiry</h2>
+                    <h2 class="faq-headings headings-dark text-center">Your Enquiry</h2>
                     <form>
                         <div class="row">
                             <div class="col">                  
-                            <input type="text" class="form-control" placeholder="First name">
+                            <input type="text" class="form-control content-text-dark" placeholder="First name">
                             </div>
                             <div class="col">
-                            <input type="text" class="form-control" placeholder="Last name">
+                            <input type="text" class="form-control content-text-dark" placeholder="Last name">
                             </div>
                         </div>
+                        <br>
                         <div class="row">
                             <div class="col">
                                 <div class="form-group">
-                                    <label for="contactEmail">Email address</label>
-                                    <input type="email" class="form-control" id="contactEmail" aria-describedby="emailHelpContact" placeholder="Enter email">
-                                    <small id="emailHelpContact" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                    <label class="headings-dark" for="contactEmail">Email address</label>
+                                    <input type="email" class="form-control content-text-dark" id="contactEmail" aria-describedby="emailHelpContact" placeholder="Enter email">
+                                    <small id="emailHelpContact" class="content-text-dark text-muted">We'll never share your email with anyone else.</small>
                                 </div>
                                 <div class="form-group">
-                                    <label for="enquiryDetails">Enquiry Details</label>
-                                    <textarea class="form-control" id="enquiryDetails" rows="3"></textarea>
-                                    <button class="btn btn-md delivery-button" role="button">Submit</button>
+                                    <label class="headings-dark" for="enquiryDetails">Enquiry Details</label>
+                                    <textarea class="form-control content-text-dark" id="enquiryDetails" rows="3"></textarea>
+                                    <button class="btn btn-md delivery-button headings-light" role="button">Submit</button>
                                 </div>
                             </div>
                         </div>
@@ -184,7 +185,7 @@
     <!-- Contact-us Map -->
     <section class="content-background find-us">
         <div class="container-fluid">
-            <h2 class="headings text-center">Find Us</h2>
+            <h2 class="headings-dark headings text-center">Find Us</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2238.4244997846085!2d-4.314658884629436!3d55.87265074021037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x488845c2a0cdaa37%3A0x9e26eab99eb389c8!2sWest%20End%20Retail%20Park%2C%20Crow%20Rd%2C%20Glasgow%20G11%207RY!5e0!3m2!1sen!2suk!4v1610184066074!5m2!1sen!2suk" width="100%" height="300" id="iframe-map">
                 <p>Your browser does not support iframes</p>
             </iframe>
@@ -194,12 +195,12 @@
     <footer class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-sm-6 col-md-4 footer-menu">
-                <h4 class="footer-headings">Contact Us</h4>
-                <p class="information">Email: TartanTaps@gmail.com</p>
-                <p class="information">Phone: 07801 784 231</p>
+                <h4 class="footer-headings headings-light">Contact Us</h4>
+                <p class="content-text-light">Email: TartanTaps@gmail.com</p>
+                <p class="content-text-light">Phone: 07801 784 231</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 footer-menu">
-                <h4 class="footer-headings">Find Us On</h4>
+                <h4 class="footer-headings headings-light">Find Us On</h4>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
                         <a target="_blank" href="https://www.facebook.com">
@@ -229,7 +230,7 @@
                 </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-4 footer-menu">
-                <h4 class="footer-headings">Sign In/Sign Up</h4>
+                <h4 class="footer-headings headings-light">Sign In/Sign Up</h4>
                     <a data-toggle="modal" data-target="#signUpModal">
                         <i class="fas fa-beer" id="beer-sign" aria-hidden="true"></i>
                         <span class="sr-only">Beer Sign Up</span>
@@ -241,7 +242,7 @@
     <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header headings-dark">
                     <h5 class="modal-title" id="exampleModalLabel">Sign In / Sign Up</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -250,23 +251,23 @@
                 <div class="modal-body">
                     <form>
                         <div class="form-group">
-                            <label for="email">Email address</label>
+                            <label class="headings-dark" for="email">Email address</label>
                             <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                         </div>
                         <div class="form-group">
-                            <label for="password">Password</label>
+                            <label class="headings-dark" for="password">Password</label>
                             <input type="password" class="form-control" id="password" placeholder="Password">
                         </div>
                         <div class="form-group">
-                            <label for="repeat-password">Repeat Password</label>
+                            <label class="headings-dark" for="repeat-password">Repeat Password</label>
                             <input type="password" class="form-control" id="repeat-password" placeholder="Repeat Password">
                         </div>
                         <div class="form-group form-check">
                             <input type="checkbox" class="form-check-input" id="remember-me">
-                            <label class="form-check-label" for="remember-me">Remember Me</label>
+                            <label class="form-check-label headings-dark" for="remember-me">Remember Me</label>
                         </div>
-                        <button type="submit" class="btn sign-up-button">Submit</button>
+                        <button type="submit" class="btn sign-up-button headings-light">Submit</button>
                     </form>
                 </div>
             </div>
