--- a/crates.html
+++ b/crates.html
@@ -47,15 +47,15 @@
                 <!--"Styling for horizontal lines taken from vclever.com"-->
                 <div class="col-12 col-sm-12 col-md-4">
                     <a href="index.html" class="no-underline">
-                        <h3 class="text-center logo-abb">TT</h3>
-                        <h1 class="text-center logo">Tartan Taps</h1>
+                        <h3 class="text-center logo-abb headings-light">TT</h3>
+                        <h1 class="text-center logo headings-dark">Tartan Taps</h1>
                     </a>
                 </div>
 
                 <!-- Sign In/Sign Up Logo Row -->
                 <div class="col-12 col-sm-12 col-md-4 d-none d-md-block text-right">
                     <a data-toggle="modal" data-target="#signUpModal">
-                        <h4 class="headings-logo">Sign In/Sign Up</h4>
+                        <h4 class="headings-logo headings-light">Sign In/Sign Up</h4>
                     </a>
                 </div> 
             </div>
@@ -99,10 +99,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
-                    <h2 class="headings">Choose Your Crate!</h2>
-                    <p class="content-text">Whether you love to get your hands on new releases, or enjoy getting fresh beer every month, Tartan Taps has got your back.</p>
-                    <p class="content-text">Don't know what beer to try next? Let us handle it.</p>
-                    <p class="content-text" data-toggle="modal" data-target="#addInfoModal"><small>Click here for further information</small></p>           
+                    <h2 class="headings-dark headings">Choose Your Crate!</h2>
+                    <p class="content-text-dark">Whether you love to get your hands on new releases, or enjoy getting fresh beer every month, Tartan Taps has got your back.</p>
+                    <p class="content-text-dark">Don't know what beer to try next? Let us handle it.</p>
+                    <p class="content-text-dark" data-toggle="modal" data-target="#addInfoModal"><small>Click here for further information</small></p>           
                 </div>
             </div>
 
@@ -112,8 +112,8 @@
                     <div class="card mx-auto text-center" style="width:18rem;">
                         <img src="https://www.redh.co.uk/media/ale_vs_beer.png" class="card-img-top" alt="beers on counter">
                         <div class="card-body">
-                            <h5 class="card-title">Mixed Crate</h5>
-                            <p class="card-text">From stouts to lagers, porters to IPA's. This crate is Brewtiful!</p>
+                            <h5 class="headings-light">Mixed Crate</h5>
+                            <p class="content-text-light">From stouts to lagers, porters to IPA's. This crate is Brewtiful!</p>
                         </div>
                     </div>
                 </div>
@@ -121,8 +121,8 @@
                     <div class="card mx-auto text-center" style="width:18rem;">
                         <img src="https://images.unsplash.com/photo-1441985969846-3e7c90531139?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="card-img-top" alt="beers on counter">
                         <div class="card-body">
-                            <h5 class="card-title">Lagers, IPA's & Pale Ale</h5>
-                            <p class="card-text">For the hop lovers. Exactly as it says on the tin. I'd tap that!</p>
+                            <h5 class="headings-light">Lagers, IPA's & Pale Ale</h5>
+                            <p class="content-text-light">For the hop lovers. Exactly as it says on the tin. I'd tap that!</p>
                         </div>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                 <div class="row">
                      <div class="col">
                         <div class="form-group">
-                            <label for="exampleFormControlSelect1">Case Size</label>
+                            <label class="headings-dark" for="exampleFormControlSelect1">Case Size</label>
                             <select class="form-control" id="exampleFormControlSelect1">
                             <option>6 - £12.99</option>
                             <option>9 - £19.99</option>
@@ -143,25 +143,25 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <label for="deliveryDate">Choose Your Delivery Date</label>
+                            <label class="headings-dark" for="deliveryDate">Choose Your Delivery Date</label>
                             <input type="date" class="form-control" id="deliveryDate">
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-                            <label class="form-check-label" for="exampleRadios1">
+                            <label class="form-check-label headings-dark" for="exampleRadios1">
                                 Mixed Crate
                             </label>
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-                            <label class="form-check-label" for="exampleRadios2">
+                            <label class="form-check-label headings-dark" for="exampleRadios2">
                                 Lagers, IPA's & Pale Ale
                             </label>
                         </div>
                         <div class="form-group add-info">
-                            <label for="exampleFormControlTextarea1">Additional Information</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                            <button class="btn btn-md delivery-button" role="button">Delivery & Payment Details</button>
+                            <label class="headings-dark" for="exampleFormControlTextarea1">Additional Information</label>
+                            <textarea class="form-control content-text-dark" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            <button class="btn btn-md delivery-button headings-light" role="button">Delivery & Payment Details</button>
                         </div>
                     </div>
                 </div>
@@ -173,12 +173,12 @@
     <footer class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-sm-6 col-md-4 footer-menu">
-                <h4 class="footer-headings">Contact Us</h4>
-                <p class="information">Email: TartanTaps@gmail.com</p>
-                <p class="information">Phone: 07801 784 231</p>
+                <h4 class="footer-headings headings-light">Contact Us</h4>
+                <p class="content-text-light">Email: TartanTaps@gmail.com</p>
+                <p class="content-text-light">Phone: 07801 784 231</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 footer-menu">
-                <h4 class="footer-headings">Find Us On</h4>
+                <h4 class="footer-headings headings-light">Find Us On</h4>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
                         <a target="_blank" href="https://www.facebook.com">
@@ -208,7 +208,7 @@
                 </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-4 footer-menu">
-                <h4 class="footer-headings">Sign In/Sign Up</h4>
+                <h4 class="footer-headings headings-light">Sign In/Sign Up</h4>
                     <a data-toggle="modal" data-target="#signUpModal">
                         <i class="fas fa-beer" id="beer-sign" aria-hidden="true"></i>
                         <span class="sr-only">Beer Sign Up</span>
@@ -216,12 +216,13 @@
             </div>
         </div>
     </footer>
-    <!-- Sign-Up Modal -->
-    <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="signIn" aria-hidden="true">
+    
+    <!-- Modal from Bootstrap -->
+    <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="signIn">Sign In / Sign Up</h5>
+                <div class="modal-header headings-dark">
+                    <h5 class="modal-title" id="exampleModalLabel">Sign In / Sign Up</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                     </button>
@@ -229,23 +230,23 @@
                 <div class="modal-body">
                     <form>
                         <div class="form-group">
-                            <label for="email">Email address</label>
+                            <label class="headings-dark" for="email">Email address</label>
                             <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                         </div>
                         <div class="form-group">
-                            <label for="password">Password</label>
+                            <label class="headings-dark" for="password">Password</label>
                             <input type="password" class="form-control" id="password" placeholder="Password">
                         </div>
                         <div class="form-group">
-                            <label for="repeat-password">Repeat Password</label>
+                            <label class="headings-dark" for="repeat-password">Repeat Password</label>
                             <input type="password" class="form-control" id="repeat-password" placeholder="Repeat Password">
                         </div>
                         <div class="form-group form-check">
                             <input type="checkbox" class="form-check-input" id="remember-me">
-                            <label class="form-check-label" for="remember-me">Remember Me</label>
+                            <label class="form-check-label headings-dark" for="remember-me">Remember Me</label>
                         </div>
-                        <button type="submit" class="btn sign-up-button">Submit</button>
+                        <button type="submit" class="btn sign-up-button headings-light">Submit</button>
                     </form>
                 </div>
             </div>
@@ -258,20 +259,20 @@
 <div class="modal fade" id="addInfoModal" tabindex="-1" role="dialog" aria-labelledby="addinfo" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-header">
+      <div class="modal-header headings-dark">
         <h5 class="modal-title" id="addinfo">We've got this!</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body content-text-dark">
         <ul class="checked">
             <li><span><i class="far fa-check-circle"></i></span> Latest Scottish Beers</li>
             <li><span><i class="far fa-check-circle"></i></span> Choose 6, 9 or 12 beers</li>
             <li><span><i class="far fa-check-circle"></i></span> Delivered to your door every month</li>
             <li><span><i class="far fa-check-circle"></i></span> Free cancellation anytime</li>
         </ul>
-        <p class="content-text">Seen a beer you like the look of? Leave a comment below and we'll do our best to include it in your order</p>
+        <p>Seen a beer you like the look of? Leave a comment below and we'll do our best to include it in your order</p>
       </div>
     </div>
   </div>
