--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
                 <!--"Styling for horizontal lines taken from vclever.com"-->
                 <div class="col-12 col-sm-12 col-md-4">
                     <a href="index.html" class="no-underline">
-                        <h3 class="text-center logo-abb">TT</h3>
-                        <h1 class="text-center logo">Tartan Taps</h1>
+                        <h3 class="text-center logo-abb headings-light">TT</h3>
+                        <h1 class="text-center logo headings-dark">Tartan Taps</h1>
                     </a>
                 </div>
 
                 <!-- Sign In/Sign Up Logo Row -->
                 <div class="col-12 col-sm-12 col-md-4 d-none d-md-block text-right">
                     <a data-toggle="modal" data-target="#signUpModal">
-                        <h4 class="headings-logo">Sign In/Sign Up</h4>
+                        <h4 class="headings-logo headings-light">Sign In/Sign Up</h4>
                     </a>
                 </div> 
             </div>
@@ -105,14 +105,14 @@
             <div class="row">
                 <div class="col-12">      
                     <div class="jumbotron text-center">
-                        <h2>New Year, New Beer!</h2>
-                        <h1 class="display-4">Scottish Craft Beer To Your Door!</h1>
-                        <p class="lead d-none d-md-block">Grab a mixed crate of some of Scotlands best artisan and craft beers.</p>
+                        <h2 class="headings-light">New Year, New Beer!</h2>
+                        <h1 class="display-4 headings-light">Scottish Craft Beer To Your Door!</h1>
+                        <p class="lead d-none d-md-block content-text-light">Grab a mixed crate of some of Scotlands best artisan and craft beers.</p>
                         <hr class="block-divider-light">
-                        <p class="jumbotron-text">Sign up today and you'll receive up to 12 beers every month!</p>
-                        <p class="jumbotron-text">From just £12.99<strong> First Month is on us!</strong></p>
-                        <button class="btn btn-md sign-up-button" data-toggle="modal" data-target="#signUpModal" role="button">Sign Up</button>
-                        <p class="jumbotron-text"><small>Subscibers must be at least 18 years of age. Keep calm and drink responsibly</small></p>
+                        <p class="content-text-light">Sign up today and you'll receive up to 12 beers every month!</p>
+                        <p class="content-text-light">From just £12.99<strong> First Month is on us!</strong></p>
+                        <button class="btn btn-md sign-up-button headings-light" data-toggle="modal" data-target="#signUpModal" role="button">Sign Up</button>
+                        <p class="content-text-light"><small>Subscibers must be at least 18 years of age. Keep calm and drink responsibly</small></p>
                     </div>  
                 </div>
             </div>
@@ -123,7 +123,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col">
-                    <h2 class="headings text-center">What our customers say</h2>
+                    <h2 class="headings-dark headings text-center">What our customers say</h2>
                     <hr class="block-divider">
                 </div>
             </div>
@@ -132,8 +132,8 @@
                     <div class="media">
                         <img src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" class="align-self-center mr-3 customer-image d-none d-sm-block" alt="Customer Image">
                         <div class="media-body">
-                            <h5 class="headings">Martin J</h5>
-                            <p class="content-text">"I love Tartan Taps. The beers are always delivered on the date of my choosing, and there is always a good variety. When I have changed the crate sizes, or delivery date, this was easily done on the website, and was completely hassle free."</p>
+                            <h5 class="headings-dark headings">Martin J</h5>
+                            <p class="content-text-dark">"I love Tartan Taps. The beers are always delivered on the date of my choosing, and there is always a good variety. When I have changed the crate sizes, or delivery date, this was easily done on the website, and was completely hassle free."</p>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -146,8 +146,8 @@
                     <div class="media">
                         <img src="https://images.unsplash.com/photo-1508214751196-bcfd4ca60f91?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="align-self-center mr-3 customer-image d-none d-sm-block" alt="Customer Image">
                         <div class="media-body">
-                            <h5 class="headings">Susan T</h5>
-                            <p class="content-text">"I'd highly recommend Tartan Taps to anyone. Signed up 6 months ago as a present to my husband and he couldn't be happier. The only thing he complains about is when I pinch a beer for myself. They are very helpful, friendly and efficient."</p>
+                            <h5 class="headings-dark headings">Susan T</h5>
+                            <p class="content-text-dark">"I'd highly recommend Tartan Taps to anyone. Signed up 6 months ago as a present to my husband and he couldn't be happier. The only thing he complains about is when I pinch a beer for myself. They are very helpful, friendly and efficient."</p>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -164,25 +164,25 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col">
-                    <h2 class="headings text-center">How it works</h2>
+                    <h2 class="headings-dark headings text-center">How it works</h2>
                     <hr class="block-divider">
                 </div>
             </div>
             <div class="row no-gutters justify-content-center text-center">
                 <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 how-it-works-container">
                     <img src="https://images.unsplash.com/photo-1423666639041-f56000c27a9a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=753&q=80" alt="Dark Ness Stout" class="how-it-works-image">
-                    <h3 class="headings">You Order</h3>
-                    <p class="content-text">Simply sign up & choose type of beers, frequency, and the date you'd like them delivered. </p>            
+                    <h3 class="headings-dark headings">You Order</h3>
+                    <p class="content-text-dark">Simply sign up & choose type of beers, frequency, and the date you'd like them delivered. </p>            
                 </div>
                 <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 how-it-works-container">
                     <img src="https://static.independent.co.uk/s3fs-public/thumbnails/image/2020/08/25/11/online-beer-delivery.jpg" alt="Dark Ness Stout" class="how-it-works-image">
-                    <h3 class="headings">We Deliver</h3>
-                    <p class="content-text">We will deliver beers right to your doorstep on your chosen date every month.</p>
+                    <h3 class="headings-dark headings">We Deliver</h3>
+                    <p class="content-text-dark">We will deliver beers right to your doorstep on your chosen date every month.</p>
                 </div>
                 <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 how-it-works-container">
                     <img src="https://images.unsplash.com/photo-1436076863939-06870fe779c2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="Dark Ness Stout" class="how-it-works-image">
-                    <h3 class="headings">You Enjoy</h3>
-                    <p class="content-text">Enjoy some of the latest and greatest beers Scotland has to offer. </p>
+                    <h3 class="headings-dark headings">You Enjoy</h3>
+                    <p class="content-text-dark">Enjoy some of the latest and greatest beers Scotland has to offer. </p>
                 </div>           
             </div>
         </div>
@@ -193,7 +193,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h2 class="headings text-center">Explore</h2>
+                    <h2 class="headings-dark headings text-center">Explore</h2>
                     <hr class="block-divider">
                 </div>
             </div>
@@ -202,9 +202,9 @@
                     <div class="card mx-auto text-center" style="width:18rem;">
                         <img src="https://images.unsplash.com/photo-1589711428920-bf084b80e0bd?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="card-img-top" alt="beers on counter">
                         <div class="card-body">
-                            <h5 class="card-title">Beers</h5>
-                            <p class="card-text">Explore our range of beers</p>
-                            <a href="beers.html" class="btn btn-sm card-button">Click here</a>
+                            <h5 class="headings-light">Beers</h5>
+                            <p class="content-text-light">Explore our range of beers</p>
+                            <a href="beers.html" class="btn btn-sm card-button headings-dark">Click here</a>
                         </div>
                     </div>
                 </div>
@@ -212,9 +212,9 @@
                     <div class="card mx-auto text-center" style="width: 18rem;">
                         <img src="https://images.unsplash.com/photo-1528823872057-9c018a7a7553?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="card-img-top" alt="brewery tanks">
                         <div class="card-body">
-                            <h5 class="card-title">Breweries</h5>
-                            <p class="card-text">Find out about the Breweries</p>
-                            <a href="breweries.html" class="btn btn-sm card-button">Click here</a>
+                            <h5 class="headings-light">Breweries</h5>
+                            <p class="content-text-light">Find out about the Breweries</p>
+                            <a href="breweries.html" class="btn btn-sm card-button headings-dark">Click here</a>
                         </div>
                     </div>
                 </div>
@@ -222,9 +222,9 @@
                     <div class="card mx-auto text-center" style="width: 18rem;">
                         <img src="https://images.unsplash.com/photo-1577670772839-befb49f0bee5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=751&q=80" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Customize Your Crate</h5>
-                            <p class="card-text">Select your preferences</p>
-                            <a href="crates.html" class="btn btn-sm card-button">Click here</a>
+                            <h5 class="headings-light">Customize Your Crate</h5>
+                            <p class="content-text-light">Select your preferences</p>
+                            <a href="crates.html" class="btn btn-sm card-button headings-dark">Click here</a>
                         </div>
                     </div>
                 </div>
@@ -235,12 +235,12 @@
     <footer class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-sm-6 col-md-4 footer-menu">
-                <h4 class="footer-headings">Contact Us</h4>
-                <p class="information">Email: TartanTaps@gmail.com</p>
-                <p class="information">Phone: 07801 784 231</p>
+                <h4 class="footer-headings headings-light">Contact Us</h4>
+                <p class="content-text-light">Email: TartanTaps@gmail.com</p>
+                <p class="content-text-light">Phone: 07801 784 231</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 footer-menu">
-                <h4 class="footer-headings">Find Us On</h4>
+                <h4 class="footer-headings headings-light">Find Us On</h4>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
                         <a target="_blank" href="https://www.facebook.com">
@@ -270,7 +270,7 @@
                 </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-4 footer-menu">
-                <h4 class="footer-headings">Sign In/Sign Up</h4>
+                <h4 class="footer-headings headings-light">Sign In/Sign Up</h4>
                     <a data-toggle="modal" data-target="#signUpModal">
                         <i class="fas fa-beer" id="beer-sign" aria-hidden="true"></i>
                         <span class="sr-only">Beer Sign Up</span>
@@ -283,7 +283,7 @@
     <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header headings-dark">
                     <h5 class="modal-title" id="exampleModalLabel">Sign In / Sign Up</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -292,23 +292,23 @@
                 <div class="modal-body">
                     <form>
                         <div class="form-group">
-                            <label for="email">Email address</label>
+                            <label class="headings-dark" for="email">Email address</label>
                             <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                         </div>
                         <div class="form-group">
-                            <label for="password">Password</label>
+                            <label class="headings-dark" for="password">Password</label>
                             <input type="password" class="form-control" id="password" placeholder="Password">
                         </div>
                         <div class="form-group">
-                            <label for="repeat-password">Repeat Password</label>
+                            <label class="headings-dark" for="repeat-password">Repeat Password</label>
                             <input type="password" class="form-control" id="repeat-password" placeholder="Repeat Password">
                         </div>
                         <div class="form-group form-check">
                             <input type="checkbox" class="form-check-input" id="remember-me">
-                            <label class="form-check-label" for="remember-me">Remember Me</label>
+                            <label class="form-check-label headings-dark" for="remember-me">Remember Me</label>
                         </div>
-                        <button type="submit" class="btn sign-up-button">Submit</button>
+                        <button type="submit" class="btn sign-up-button headings-light">Submit</button>
                     </form>
                 </div>
             </div>
